<resources>
    <string name="app_name">Hang Meas Radio Official</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_up_here"><u>Sign up here.</u></string>

    <string name="para_contact_us">
        No, 132-134Eo, St. 182\n
        Sangkat Boeung Prolit, Khan 7 Makara\n
        Phnom Penh, Cambodia\n
        Email : info@hangmeasfm.com\n
        Hotline : 023 452 3333
    </string>

    <string name="app_title">RHM &amp; HM Radio​ Stream</string>
    <string name="about_us">About US</string>
    <string name="contact_us">Contact Us</string>
    <string name="login">LOGIN</string>
    <string name="user_name">User Name</string>
    <string name="phnum">Phone Number</string>
    <string name="memeber">Not a memeber yet?</string>
    <string name="user">User:</string>
    <string name="sign">SIGN UP</string>
    <string name="gender">Gender</string>
    <string name="dob">Date Of Birth</string>
    <string name="Loading">Loading...</string>
    <string name="radio_st">Radio Streaming</string>
    <string name="video_st">TV Streaming</string>
    <string name="lng">Language</string>
    <string name="can_load">Can\'t loading radio</string>
    <string name="check_inter">Please check your internet connection.</string>
    <string name="stop_radio">Please stop radio before change langauge.</string>
    <string name="login_fail">Incorrect Username&amp;Password.</string>
    <string name="register_fail">This username is already in use.</string>
    <string name="virify_sign">Please check your information again.</string>
    <string name="no_inter">No internet connection.</string>
    <string name="rhm_fm_95">RHM FM 95.7 MHz</string>
    <string name="rhm_fm_104">HM FM 104.5 MHz</string>
    <string name="rhm_fm">Rasmey Hang Meas</string>
    <string name="hm_fm">Hang Meas</string>
    <string name="hm_tv">HM HDTV</string>
    <string name="rhm_tv">RHM HDTV</string>
    <string name="status_bar_bottom">You\'re listening to</string>

    <string name="para_about_us">
        <b>HangMeas Production :\n\n</b>


        Hang Meas Video Company Co., ltd,which was established in 1994, is one of the
        fastest growing in-term of media production houses in Cambodia,
        according to the market share. Also, we are the first to create and
        provide Cambodian people with songs and music video-karaoke.We strictly and primarily
        focus on production, multimedia, and the market share in order to develop and classify customer needs.\n\n

        <b>Radio :\n\n</b>

        Under Hang Meas Video Company Co., ltd, Hang Meas FM 104.5MHz and Reasmey Hang Meas
        FM 95.7MHz, radio stations in town which come with: Sound Quality Huge Coverage Areas (Online Radio)
        Broadcasting Power of 5KW And so many different attractive programs plus live chit chat with Hang Meas Super Star.
        By 2010, we are expanding ourself to attract and cover as many as targets by producing various radio programs
        to fit the age of the listners and as well as to fit the sponsor(s) products.\n\n

        <b>We Alway Stays with you:\n\n</b>

        Serve Entertain Provide information effectively Broadcast your promotions to the right end consumers Broadcast
        the best songs from both Hang Meas and Reasmey Hang MeasProductions What you are waiting for?
        Just tune in our station Hang Meas FM104.5Mhz and Reasmey Hang Meas FM 95.7MHz\n\n

        <b>24 Province-City HM HDTV Coverage:\n\n</b>

        - Phnom Penh: UHF Ch 46; PPCTV Ch 65; CCTV Ch 21; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Battambang: DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12; Hang Meas CATV Ch 16; Raksmey CATV Ch 12\n\n
        - Preah Sihanouk: CATV Ch 64, CATV Ch 29; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Siem Reap: Raksmey-Star CATV Ch 27, Ch 28; Angkor CATV Ch 88; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Bantean Meanchey: CATV 15, Digital TV Ch 5; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Kampong Cham: UHF Ch 46; CATV Ch 4; Digital TV Ch 137; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Kratie: UHF 46; Heng-Heng CATV Ch 11; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Koh Kong: CATV Ch 2; Ch 15; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Preah Vihear: DTV SDTV Ch 12 DTV DTV Ch Thaicom 4\n\n
        - Kompot: UHF Ch 46; Daravideo CATV 40; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Ratanakiri: Hangmeas CATV 10; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Mondulkiri: SM CATV Ch 31; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Kampong Thom: UHF Ch 46; CATV Ch 88; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Pursat: CAM CATV Ch 14; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Kampong Chhnang: UHF Ch 46; CATV Ch 15; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Stung Treng: CATV Ch 17; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Kampong Speu: UHF Ch 46; CATV Ch 18; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Kandal: UHF Ch 46; CATV Ch 5; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Pailin: CATV Ch 12; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Prey Veng: UHF Ch 46; DTV HDTV Ch Thaicom 4;\n\n
        - Svay Rieng: UHF Ch 46; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Takeo: UHF Ch 46; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Kep: UHF Ch 46; DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n
        - Oddor meanchey: DTV HDTV Ch Thaicom 4; DTV SDTV Ch 12\n\n

    </string>

    <string-array name="province_arrays">
        <item>Location...</item>
        <item>Phnom Penh</item>
        <item>Banteay Meanchey Province</item>
        <item>Battambang Province</item>
        <item>Kampong Cham Province</item>
        <item>Kampong Chhnang Province</item>
        <item>Kampong Speu Province</item>
        <item>Kampong Thom Province</item>
        <item>Kampot Province</item>
        <item>Kandal Province</item>
        <item>Koh Kong Province</item>
        <item>Kep Province</item>
        <item>Kratié Province</item>
        <item>Mondulkiri Province</item>
        <item>Oddar Meanchey Province</item>
        <item>Pailin Province</item>
        <item>Preah Sihanouk Province</item>
        <item>Preah Vihear Province</item>
        <item>Pursat Province</item>
        <item>Prey Veng Province</item>
        <item>Ratanakiri Province</item>
        <item>Siem Reap Province</item>
        <item>Stung Treng Province</item>
        <item>Svay Rieng Province</item>
        <item>Takéo Province</item>
    </string-array>

    <string-array name="arr_gender">
        <item>Select your gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

</resources>
